[package]
name = "isotope_plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = { version = "0.8.3", features = ["wasm"] }
yew = "0.19.0"
yew-hooks = "0.1.56"
log = "0.4.6"
wasm-logger = "0.2"